# healthscope-ai

./: .dockerignore  .gitignore  README.md  compose.yaml
.github/workflows/: backend-ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260719_01_create_hospital_snapshots.py
backend/src/healthscope/: __init__.py  cli.py  config.py  database.py  main.py
backend/src/healthscope/api/: dependencies.py
backend/src/healthscope/api/routes/: health.py  hospitals.py
backend/src/healthscope/clients/: __init__.py  cms.py
backend/src/healthscope/models/: __init__.py  hospitals.py
backend/src/healthscope/repositories/: __init__.py  hospitals.py
backend/src/healthscope/schemas/: health.py  hospitals.py
backend/src/healthscope/services/: __init__.py  ingestion.py
backend/tests/: test_cli.py  test_cms_client.py  test_database.py  test_health.py  test_hospitals.py  test_ingestion.py
docs/: architecture.md
