[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "healthscope-api"
version = "0.1.0"
description = "Backend API for the HealthScope AI healthcare intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/healthscope"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=healthscope --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["healthscope"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["healthscope"]
