[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "healthscope-api"
version = "0.1.0"
description = "Backend API for the HealthScope AI healthcare intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18,<2",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0.51,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/healthscope"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=healthscope --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["healthscope"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["healthscope"]
